--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -99,6 +99,17 @@ Resources:
           FromPort: "22"
           ToPort: "22"
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: "80"
+          ToPort: "80"
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: "443"
+          ToPort: "443"
+          CidrIp: 0.0.0.0/0
+      SecurityGroupEgress:
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
 
   EC2InstanceProfile:
     Type: AWS::IAM::InstanceProfile
@@ -138,6 +149,9 @@ Resources:
           sudo yum install -y nodejs 
           sudo yum install -y git
           sudo yum install -y jq
+          export HOME=/root/
+          sudo npm install pm2 -g
+          sudo npm install
           echo ${DiscordToken}
           echo ${OpenAIToken}
           echo ${AssistantToken}
@@ -147,14 +161,10 @@ Resources:
           echo "Discord Token has been set in environment variables."
           sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git 
           cd openai-assistants-discord-bot
-          sudo npm install
           sudo chmod +rx bot.js
           sudo chmod +rx mydata.jsonl
-          sudo npm install pm2 -g
           pm2 startup systemd
           pm2 start bot.js
           pm2 save
-          pm2 startup systemd
-          pm2 start bot.js -f
 
 
