--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -155,8 +155,11 @@ Resources:
           echo ${OpenAIToken}
           echo ${AssistantToken}
           echo export DISCORDTOKEN=${DiscordToken} >> /etc/environment
+          export $DISCORDTOKEN
           echo export OPENAI_API_KEY=${OpenAIToken} >> /etc/environment
+          export $OPENAI_API_KEY
           echo export ASSISTANT_ID=${AssistantToken} >> /etc/environment
+          export $ASSISTANT_ID
           echo "Discord Token has been set in environment variables."
           sudo git clone https://github.com/BlinkTim/openai-assistants-discord-bot.git 
           cd openai-assistants-discord-bot
