--- a/package.json
+++ b/package.json
@@ -8,19 +8,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:T-Sahin-8181/openai-assistants-discord-bot.git"
+    "url": "git+ssh://git@github.com/T-Sahin-8181/openai-assistants-discord-bot.git"
   },
   "keywords": [],
   "author": "",
-  "license": "",
-  "bugs": {
-    "url": "git@github.com:T-Sahin-8181/openai-assistants-discord-bot.git"
-  },
-  "homepage": "",
+  "license": "ISC",
+  "homepage": "https://github.com/T-Sahin-8181/openai-assistants-discord-bot#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.4",
+    "ejs": "^3.1.9",
+    "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "google-auth-library": "^9.6.3",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.2",
     "nodemon": "^3.0.3",
-    "openai": "^4.28.0"
+    "openai": "^4.28.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/T-Sahin-8181/openai-assistants-discord-bot/issues"
   }
 }
